<resources>
    <string name="app_name">ToDo</string>
    <string name="add">+</string>
    <string name="submit">submit</string>


    <string name="activity">事务名称</string>
    <string name="everyday">每日</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registerd">registerd</string>
    <string name="prompt_email">Email</string>
    <string name="language">中文</string>


</resources>